Prevent the readme card list group from overflowing on small screens

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,6 +27,14 @@ h6 {
     margin: 0;
 }
 
+.fg-1 {
+    flex-grow: 1;
+}
+
+.fg-inf {
+    flex-grow: 9999;
+}
+
 code {
     font-family: "Roboto Mono";
 }
