--- a/src/css/readme.css
+++ b/src/css/readme.css
@@ -15,6 +15,16 @@
 
 .readme-card > .card-body > .card-body-bar {
     background-color: var(--box-tertiary-color);
+    padding: 0;
+    margin: 0;
+    border: 1px solid var(--box-border-color);
+    overflow: hidden;
+}
+
+.readme-card > .card-body > .card-body-bar > .list-group-item{
+    border: 1px solid var(--box-border-color);
+    margin: -1px;
+    border-radius: 0px;
 }
 
 .row-grid {
